--- a/v2rayse.yaml
+++ b/v2rayse.yaml
@@ -21,9 +21,23 @@ dns:
     - tls://dns.google:853
 
 proxies:
-  - {"name":"韩国","type":"trojan","server":"kr.daydayup.ltd","port":443,"udp":true,"password":"e5e32bb3","sni":"kr.daydayup.ltd","skip-cert-verify":false,"network":"tcp"}
-  - {"name":"美国","type":"trojan","server":"us.daydayup.ltd","port":443,"udp":true,"password":"b6786a4c","sni":"us.daydayup.ltd","skip-cert-verify":false,"network":"tcp"}
-  - {"name":"香港","type":"trojan","server":"hk.daydayup.ltd","port":443,"udp":true,"password":"0a2ae18b","sni":"hk.daydayup.ltd","skip-cert-verify":false,"network":"tcp"}
+  - {name: 🇰🇷 韩国自建, type : trojan, server : kr.daydayup.ltd, port : 443, udp : true, password : e5e32bb3, sni : kr.daydayup.ltd, skip-cert-verify : false}
+  - {name: 🇺🇸 美国自建, type : trojan, server : us.daydayup.ltd, port : 443, udp : true, password : b6786a4c, sni : us.daydayup.ltd, skip-cert-verify : false}
+  - {name: 🇭🇰 香港自建, type : trojan, server : hk.daydayup.ltd, port : 443, udp : true, password : 0a2ae18b, sni : hk.daydayup.ltd, skip-cert-verify : false}
+  - {name: 🇺🇸 美国1号-0.1x, server: 163.123.192.154, port: 443, type: trojan, password: 89634bb0-a5c0-4ae1-b342-7d5cc1523227, sni: download.xn--mes358a9urctx.com, udp: true}
+  - {name: 🇺🇸 美国2号-0.1x, server: 163.123.192.155, port: 443, type: trojan, password: 89634bb0-a5c0-4ae1-b342-7d5cc1523227, sni: download.xn--mes358a9urctx.com, udp: true}
+  - {name: 🇺🇸 美国3号-0.1x, server: 163.123.192.153, port: 443, type: trojan, password: 89634bb0-a5c0-4ae1-b342-7d5cc1523227, sni: download.xn--mes358a9urctx.com, udp: true}
+  - {name: 🇺🇸 美国4号-0.1x, server: 163.123.192.156, port: 443, type: trojan, password: 89634bb0-a5c0-4ae1-b342-7d5cc1523227, sni: download.xn--mes358a9urctx.com, udp: true}
+  - {name: 🇩🇪 德国1号, server: 217.79.184.18, port: 443, type: trojan, password: 89634bb0-a5c0-4ae1-b342-7d5cc1523227, sni: download.xn--mes358a9urctx.com, udp: true}
+  - {name: 🇭🇰 香港亚马逊, server: hk2.downloadvip.cfd, port: 443, type: trojan, password: 89634bb0-a5c0-4ae1-b342-7d5cc1523227, sni: download.xn--mes358a9urctx.com, udp: true}
+  - {name: 🇯🇵 日本亚马逊, server: jp2.downloadvip.cfd, port: 443, type: trojan, password: 89634bb0-a5c0-4ae1-b342-7d5cc1523227, sni: download.xn--mes358a9urctx.com, udp: true}
+  - {name: 🇸🇬 新加坡亚马逊, server: sg2.downloadvip.cfd, port: 443, type: trojan, password: 89634bb0-a5c0-4ae1-b342-7d5cc1523227, sni: download.xn--mes358a9urctx.com, udp: true}
+  - {name: 🇯🇵 Az-日本东京, server: azjp2.downloadvip.cfd, port: 443, type: trojan, password: 89634bb0-a5c0-4ae1-b342-7d5cc1523227, sni: jp1.xn--mes358a9urctx.com, udp: true}
+  - {name: 🇺🇸 Az-美国1号-0.1x, server: azjp2.downloadvip.cfd, port: 443, type: trojan, password: 89634bb0-a5c0-4ae1-b342-7d5cc1523227, sni: us1.xn--mes358a9urctx.com, udp: true}
+  - {name: 🇺🇸 Az-美国2号-0.1x, server: azjp2.downloadvip.cfd, port: 443, type: trojan, password: 89634bb0-a5c0-4ae1-b342-7d5cc1523227, sni: us2.xn--mes358a9urctx.com, udp: true}
+  - {name: 🇺🇸 Az-美国3号-0.1x, server: azjp2.downloadvip.cfd, port: 443, type: trojan, password: 89634bb0-a5c0-4ae1-b342-7d5cc1523227, sni: us3.xn--mes358a9urctx.com, udp: true}
+  - {name: 🇺🇸 Az-美国4号-0.1x, server: azjp2.downloadvip.cfd, port: 443, type: trojan, password: 89634bb0-a5c0-4ae1-b342-7d5cc1523227, sni: us4.xn--mes358a9urctx.com, udp: true}
+  - {name: 🇨🇳 台湾Hinet, server: hinet2.downloadvip.cfd, port: 443, type: trojan, password: 89634bb0-a5c0-4ae1-b342-7d5cc1523227, sni: download.xn--mes358a9urctx.com, udp: true}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
