--- a/v2rayse.yaml
+++ b/v2rayse.yaml
@@ -21,9 +21,9 @@ dns:
     - tls://dns.google:853
 
 proxies:
-  - {"name":"香港01","type":"trojan","server":"node-gzdx2.wnbo.dev","port":39470,"udp":true,"password":"8f239e4a-8e2c-4dde-a3e3-8597ed056373","sni":"hktr.meowport.icu","skip-cert-verify":true,"network":"tcp"}
-  - {"name":"香港02","type":"trojan","server":"node-shdx.wnbo.dev","port":39470,"udp":true,"password":"8f239e4a-8e2c-4dde-a3e3-8597ed056373","sni":"hktr.meowport.icu","skip-cert-verify":true,"network":"tcp"}
-  - {"name":"香港03","type":"trojan","server":"hk.daydayup.ltd","port":443,"udp":true,"password":"0a2ae18b","sni":"hk.daydayup.ltd","skip-cert-verify":true,"network":"tcp"}
+  - {"name":"日本01","type":"trojan","server":"node-gzdx2.wnbo.dev","port":39470,"udp":true,"password":"8f239e4a-8e2c-4dde-a3e3-8597ed056373","sni":"hktr.meowport.icu","skip-cert-verify":true,"network":"tcp"}
+  - {"name":"香港01","type":"trojan","server":"node-shdx.wnbo.dev","port":39470,"udp":true,"password":"8f239e4a-8e2c-4dde-a3e3-8597ed056373","sni":"hktr.meowport.icu","skip-cert-verify":true,"network":"tcp"}
+  - {"name":"香港02","type":"trojan","server":"hk.daydayup.ltd","port":443,"udp":true,"password":"0a2ae18b","sni":"hk.daydayup.ltd","skip-cert-verify":true,"network":"tcp"}
   - {"name":"美国01","type":"trojan","server":"us.daydayup.ltd","port":443,"udp":true,"password":"b6786a4c","sni":"us.daydayup.ltd","skip-cert-verify":true,"network":"tcp"}
   - {"name":"韩国01","type":"trojan","server":"kr.daydayup.ltd","port":443,"udp":true,"password":"e5e32bb3","sni":"kr.daydayup.ltd","skip-cert-verify":true,"network":"tcp"}
 proxy-groups:
